Ajout dependencies + properties dans pom

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,21 @@
   <groupId>formation.ajc-sopra</groupId>
   <artifactId>NintendoProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.0.8</version>
+        </dependency>
+    </dependencies>
+
+
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+  
+  
 </project>
